add remove item functionality

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <input type="text" id="qyt" placeholder="Qyt.">
         <input type="text" id="unitPrice" placeholder="Unit Price">
         <input type="text" id="amount" placeholder="Amount" disabled>
+        <button class="removeRow">X</button>
       </div>
     </div>
       <button id="addRow" onclick="addNewRow()">Add row</button>
